--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Philip Cruz Personal Website</div>
+      <div class="logo">Philip Cruz</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -20,7 +20,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Philip Cruz</div>
+      <div class="logo">Philip Cruz </div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
             <span></span>
@@ -34,6 +34,29 @@
             <li><a href="#contact" onclick="toggleMenu">Contact</a></li>
         </div>
       </div>
+      </nav>
+      <section id="profile">
+        <div class="section_pic-container">
+        <img src="./assets/pfp-round.jpg" alt="Philip Cruz profile picture">
+      </div>
+      <div class="section_text">
+        <p class="section_text_p1">Hello, I'm</p>
+        <h1 class="title">Philip Cruz</h1>
+        <p class="section_text_p2">Full-stack Developer</p>
+        <div class="btn-container">
+          <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">
+            Download CV
+          </button>
+          <button class="btn btn color-1" onclick="location.href='./#contact'">
+            Contact Info
+          </button>
+        </div>
+        <div id="socials-container">
+          <img src="./assets/linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='https://linkedin.com/'">
+        
+        </div>
+      </div>
+      </section>
     <script src="scritpt.js"></script>
   </body>
 </html>
