--- a/index.html
+++ b/index.html
@@ -20,31 +20,34 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Philip Cruz </div>
+      <div class="logo">Philip Cruz</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
-            <span></span>
-            <span></span>
-            <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
         <div class="menu-links">
-            <li><a href="#about" onclick="toggleMenu">About</a></li>
-            <li><a href="#experience" onclick="toggleMenu">Experience</a></li>
-            <li><a href="#projects" onclick="toggleMenu">Projects</a></li>
-            <li><a href="#contact" onclick="toggleMenu">Contact</a></li>
+          <li><a href="#about" onclick="toggleMenu">About</a></li>
+          <li><a href="#experience" onclick="toggleMenu">Experience</a></li>
+          <li><a href="#projects" onclick="toggleMenu">Projects</a></li>
+          <li><a href="#contact" onclick="toggleMenu">Contact</a></li>
         </div>
       </div>
-      </nav>
-      <section id="profile">
-        <div class="section_pic-container">
-        <img src="./assets/pfp-round.jpg" alt="Philip Cruz profile picture">
+    </nav>
+    <section id="profile">
+      <div class="section_pic-container">
+        <img src="./assets/pfp-round.jpg" alt="Philip Cruz profile picture" />
       </div>
       <div class="section_text">
         <p class="section_text_p1">Hello, I'm</p>
         <h1 class="title">Philip Cruz</h1>
         <p class="section_text_p2">Full-stack Developer</p>
         <div class="btn-container">
-          <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">
+          <button
+            class="btn btn-color-2"
+            onclick="window.open('./assets/resume.pdf')"
+          >
             Download CV
           </button>
           <button class="btn btn color-1" onclick="location.href='./#contact'">
@@ -52,11 +55,22 @@
           </button>
         </div>
         <div id="socials-container">
-          <img src="./assets/linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='https://linkedin.com/'">
-        
+          <img
+            src="./assets/linkedin.png"
+            alt="My LinkedIn Profile"
+            class="icon"
+            onclick="location.href='https://linkedin.com/'"
+          />
+
+          <img
+            src="./assets/gitmark.png"
+            alt="My Github Profile"
+            class="icon"
+            onclick="location.href='https://github.com/'"
+          />
         </div>
       </div>
-      </section>
+    </section>
     <script src="scritpt.js"></script>
   </body>
 </html>
