--- a/index.html
+++ b/index.html
@@ -71,6 +71,43 @@
         </div>
       </div>
     </section>
+    <section id="about">
+      <p class="section_text_p1">Get To Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section_pic-container">
+          <img src="assets/about.jpg" alt="Profile picture" class="about-pic" />
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img
+                src="./assets/experience.jpg"
+                alt="experience-icon"
+                class="icon"
+              />
+              <h3>Experience</h3>
+              <p>
+                2+ years <br />
+                /Full-stack Developer
+              </p>
+            </div>
+            <div class="details-container">
+              <img
+                src="./assets/education.jpg"
+                alt="Education icon"
+                class="icon"
+              />
+              <h3>Education</h3>
+              <p>
+                B.Sc Computer Science <br />
+                M.Sc Masters Degree
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="scritpt.js"></script>
   </body>
 </html>
