--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
       <h1 class="title">About Me</h1>
       <div class="section-container">
         <div class="section_pic-container">
-          <img src="assets/about.jpg" alt="Profile picture" class="about-pic" />
+          <img src="assets/about-pic.png" alt="Profile picture" class="about-pic" />
         </div>
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/experience.jpg"
+                src="./assets/experience.png"
                 alt="experience-icon"
                 class="icon"
               />
@@ -94,7 +94,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.jpg"
+                src="./assets/education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -105,9 +105,20 @@
               </p>
             </div>
           </div>
+          <div class="text-container">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Reprehenderit in blanditiis doloremque saepe, numquam facilis nisi
+              ab et non, aut vitae laboriosam iste excepturi, ipsa qui molestias
+              repellat voluptatibus deserunt!
+            </p>
+          </div>
         </div>
+        <img src="./assets/arrow.png" alt="Arrow Icon" class="icon arrow">
       </div>
     </section>
     <script src="scritpt.js"></script>
   </body>
 </html>
+
+
