--- a/index.html
+++ b/index.html
@@ -67,119 +67,166 @@
     <h1 class="title">About Me</h1>
     <div class="section-container">
       <div class="section_pic-container">
-        <img src="assets/about-pic.png" alt="Profile picture" class="about-pic" />
+        <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic" />
       </div>
       <div class="about-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <img src="./assets/experience.png" alt="experience-icon" class="icon" />
+            <img src="./assets/experience.png" alt="Experience icon" class="icon" />
             <h3>Experience</h3>
-            <p>
-              2+ years <br />
-              /Full-stack Developer
-            </p>
+            <p>2+ years <br />Backend Development</p>
           </div>
           <div class="details-container">
             <img src="./assets/education.png" alt="Education icon" class="icon" />
             <h3>Education</h3>
-            <p>
-              B.Sc Computer Science <br />
-              M.Sc Masters Degree
-            </p>
+            <p>B.S Computer Science <br />M.Sc Masters Degree</p>
           </div>
         </div>
         <div class="text-container">
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Reprehenderit in blanditiis doloremque saepe, numquam facilis nisi
-            ab et non, aut vitae laboriosam iste excepturi, ipsa qui molestias
-            repellat voluptatibus deserunt!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. A nam in, laboriosam doloremque vitae animi
+            expedita laudantium fuga ratione ipsa explicabo possimus maxime exercitationem! Deleniti soluta dolorem
+            repudiandae vitae obcaecati!
           </p>
         </div>
       </div>
-      <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'">
     </div>
+    <img src="assets/arrow.png" 
+    alt="Arrow icon"
+    class="icon arrow" 
+    onclick="location.href='./#experience'"
+    />
   </section>
   <section id="experience">
     <p class="section_text_p1">Explore My</p>
     <h1 class="title">Experience</h1>
     <div class="experience-details-container">
       <div class="about-containers">
-        <div class="details-containers">
-          <h2 class="experience-sub-title">Front-end Development</h2>
+        <div class="details-container">
+          <h2 class="experience-sub-title">Frontend Development</h2>
           <div class="article-container">
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./assets/checkmark.png" 
+              alt="experience icon"
+              class="icon"
+              />
               <div>
                 <h3>HTML</h3>
-                <p>Experienced</p>
+                <p>Experience</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./assets/checkmark.png" 
+              alt="experience icon"
+              class="icon"
+              />
               <div>
                 <h3>CSS</h3>
-                <p>Experienced</p>
+                <p>Experience</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./assets/checkmark.png" 
+              alt="experience icon"
+              class="icon"
+              />
               <div>
                 <h3>SASS</h3>
-                <p>Intermediate</p>
+                <p>Experience</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./assets/checkmark.png" 
+              alt="experience icon"
+              class="icon"
+              />
               <div>
                 <h3>JavaScript</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./assets/checkmark.png" 
+              alt="experience icon"
+              class="icon"
+              />
               <div>
-                <h3>Typescript</h3>
+                <h3>TypeScript</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./assets/checkmark.png" 
+              alt="experience icon"
+              class="icon"
+              />
               <div>
-                <h3>Material UI</h3>
+                <h3>Material UI </h3>
                 <p>Intermediate</p>
               </div>
             </article>
           </div>
         </div>
-        <div class="details-containers">
-          <h2 class="experience-sub-title">Back-end Development</h2>
+        <div class="details-container">
+          <h2 class="experience-sub-title">Backend Development</h2>
           <div class="article-container">
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./assets/checkmark.png" 
+              alt="experience icon"
+              class="icon"
+              />
               <div>
                 <h3>PostgreSQL</h3>
-                <p>Basic</p>
+                <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./assets/checkmark.png" 
+              alt="experience icon"
+              class="icon"
+              />
               <div>
                 <h3>Node JS</h3>
-                <p>Experienced</p>
+                <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./assets/checkmark.png" 
+              alt="experience icon"
+              class="icon"
+              />
               <div>
                 <h3>Express JS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./assets/checkmark.png" 
+              alt="experience icon"
+              class="icon"
+              />
               <div>
                 <h3>Git</h3>
+                <p>Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" 
+              alt="experience icon"
+              class="icon"
+              />
+              <div>
+                <h3>Bootstrap</h3>
+                <p>Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" 
+              alt="experience icon"
+              class="icon"
+              />
+              <div>
+                <h3>PHP</h3>
                 <p>Intermediate</p>
               </div>
             </article>
@@ -187,8 +234,29 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+    <img src="./assets/arrow.png" 
+    alt="arrow icon"
+    class="icon arrow"
+    onclick="location.href='./#projects'"
+    />
+  </section>
+  <section id="project">
+    <p class="section_text_p1">Browse My Recent</p>
+    <h1 class="title">Projects</h1>
+    <div class="experience-details- color-container">
+      <div class="article-container">
+        <img src="./assets/project-1.png" 
+        alt="Project 1"
+        class="project-img"
+        />
+      </div>
+      <h2 class="experience-sub-title project-title">Project One</h2>
+      <div class="btn-container">
+        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'"></button>
+      </div>
+    </div>
   </section>
   <script src="scritpt.js"></script>
 </body>
+
 </html>
