--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <h1 class="title">About Me</h1>
     <div class="section-container">
       <div class="section_pic-container">
-        <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic" />
+        <img src="./assets/me.jpg" alt="Profile picture" class="about-pic" />
       </div>
       <div class="about-details-container">
         <div class="about-containers">
@@ -79,23 +79,20 @@
           <div class="details-container">
             <img src="./assets/education.png" alt="Education icon" class="icon" />
             <h3>Education</h3>
-            <p>B.S Computer Science <br />M.Sc Masters Degree</p>
+            <p>B.S Computer Science <br />Masters in Computer Science</p>
           </div>
         </div>
         <div class="text-container">
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. A nam in, laboriosam doloremque vitae animi
-            expedita laudantium fuga ratione ipsa explicabo possimus maxime exercitationem! Deleniti soluta dolorem
-            repudiandae vitae obcaecati!
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora nihil cumque delectus. Magni aperiam
+            eligendi iste? Adipisci expedita facere eveniet quidem voluptate natus sapiente ipsum necessitatibus quam
+            praesentium minima qui sequi quisquam dolores dolorem aut ut perferendis explicabo, nam repellat deserunt
+            minus? Accusamus ipsam soluta, tempora aliquam saepe corrupti et!
           </p>
         </div>
       </div>
     </div>
-    <img src="assets/arrow.png" 
-    alt="Arrow icon"
-    class="icon arrow" 
-    onclick="location.href='./#experience'"
-    />
+    <img src="assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
   </section>
   <section id="experience">
     <p class="section_text_p1">Explore My</p>
@@ -106,60 +103,42 @@
           <h2 class="experience-sub-title">Frontend Development</h2>
           <div class="article-container">
             <article>
-              <img src="./assets/checkmark.png" 
-              alt="experience icon"
-              class="icon"
-              />
+              <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
               <div>
                 <h3>HTML</h3>
                 <p>Experience</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" 
-              alt="experience icon"
-              class="icon"
-              />
+              <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
               <div>
                 <h3>CSS</h3>
                 <p>Experience</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" 
-              alt="experience icon"
-              class="icon"
-              />
+              <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
               <div>
                 <h3>SASS</h3>
                 <p>Experience</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" 
-              alt="experience icon"
-              class="icon"
-              />
+              <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
               <div>
                 <h3>JavaScript</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" 
-              alt="experience icon"
-              class="icon"
-              />
+              <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
               <div>
                 <h3>TypeScript</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" 
-              alt="experience icon"
-              class="icon"
-              />
+              <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
               <div>
                 <h3>Material UI </h3>
                 <p>Intermediate</p>
@@ -171,60 +150,42 @@
           <h2 class="experience-sub-title">Backend Development</h2>
           <div class="article-container">
             <article>
-              <img src="./assets/checkmark.png" 
-              alt="experience icon"
-              class="icon"
-              />
+              <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
               <div>
                 <h3>PostgreSQL</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" 
-              alt="experience icon"
-              class="icon"
-              />
+              <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
               <div>
                 <h3>Node JS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" 
-              alt="experience icon"
-              class="icon"
-              />
+              <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
               <div>
                 <h3>Express JS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" 
-              alt="experience icon"
-              class="icon"
-              />
+              <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
               <div>
                 <h3>Git</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" 
-              alt="experience icon"
-              class="icon"
-              />
+              <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
               <div>
                 <h3>Bootstrap</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" 
-              alt="experience icon"
-              class="icon"
-              />
+              <img src="./assets/checkmark.png" alt="experience icon" class="icon" />
               <div>
                 <h3>PHP</h3>
                 <p>Intermediate</p>
@@ -234,28 +195,85 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" 
-    alt="arrow icon"
-    class="icon arrow"
-    onclick="location.href='./#projects'"
-    />
+    <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
-  <section id="project">
+  <section id=projects>
     <p class="section_text_p1">Browse My Recent</p>
     <h1 class="title">Projects</h1>
-    <div class="experience-details- color-container">
-      <div class="article-container">
-        <img src="./assets/project-1.png" 
-        alt="Project 1"
-        class="project-img"
-        />
-      </div>
-      <h2 class="experience-sub-title project-title">Project One</h2>
-      <div class="btn-container">
-        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'"></button>
+    <div class="experience-details-container">
+      <div class="about-containers">
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Project One</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Project Two</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/project-3.png" alt="Project 3" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Project Three</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+              Live Demo
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </section>
+  <section id="contact">
+    <p class="section_text_p1">Get in Touch</p>
+    <h1 class="title">Contact Me</h1>
+    <div class="contact-info-upper-container">
+      <div class="contact-info-container">
+        <img src="./assets/email.png" alt="mail icon" class="icon contact-icon" />
+        <p><a href="mailto:philipt.cruz05@gmail.com">philipt.cruz05@gmail.com</a></p>
+      </div>
+      <div class="contact-info-container">
+        <img src="./assets/linkedin.png" alt="linkedIn icon" class="icon contact-icon" />
+        <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <nav>
+      <div class="nav-links-container">
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <p>Copyright &#169; 2024 Philip Cruz. All Rights Reserved</p>
+  </footer>
   <script src="scritpt.js"></script>
 </body>
 
